<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group
        android:id="@+id/modification"
        android:checkableBehavior="single">
        <item
            android:id="@+id/nav_archive"
            android:checkable="false"
            android:icon="@drawable/ic_archive_black_24dp"
            android:title="@string/archive" />
        <item
            android:id="@+id/nav_trash"
            android:checkable="false"
            android:icon="@drawable/ic_delete_black_24dp"
            android:title="@string/trash" />
    </group>
    <group
        android:id="@+id/settings"
        android:checkableBehavior="single">
        <item
            android:id="@+id/nav_settings"
            android:checkable="false"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/settings" />
        <item
            android:id="@+id/nav_signout"
            android:checkable="false"
            android:title="@string/sign_out" />
    </group>

</menu>
